--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
           <a class="nav-link fw-bold py-1 px-0" href="#projects">List of Projects</a>
-          <a class="nav-link fw-bold py-1 px-0" href="finance/index.php">Finance</a>
+          <a class="nav-link fw-bold py-1 px-0" href="../finance/index.php">Finance</a>
           <a class="nav-link fw-bold py-1 px-0" href="#">Contact</a>
         </nav>
       </div>
