--- a/index.html
+++ b/index.html
@@ -168,6 +168,13 @@
             <a href="aula04/index.php" class="stretched-link text-white">Aula 04</a>
           </div>
         </div>
+        <div class="col position-relative borderTeste">
+          <div>
+            <h5 class="mt-0">Loja de Carros</h5>
+            <p>Atividade</p>
+            <a href="loja-de-veiculos/index.php" class="stretched-link text-white">Loja</a>
+          </div>
+        </div>
       </div>
     </section>
 
