--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       border-radius: 30px;
       padding: 2%;
       /* margin: 2%; */
-      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+      transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     }
 
 
@@ -142,37 +142,47 @@
     </main>
 
     <section id="projects">
-      <!-- proximo -->
-      <div class="row my-5">
-        <div class="col mx-2 position-relative borderTeste">
-          <div>
-            <h5 class="mt-0">Variáveis em PHP</h5>
-            <p>Conceitos de variáis</p>
-            <a href="variaveisPhp/index.php" class="stretched-link text-white">Variaveis</a>
+      <div class="row">
+        <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+          <div class="card h-100">
+            <a href="variaveisPhp/" class="text-dark">
+              Conceitos de variáveis
+            </a>
           </div>
         </div>
-        <div class="col mx-2 position-relative borderTeste">
-          <div>
-            <h5 class="mt-0">Atividades (while>for>switch)</h5>
-            <p>Exercicios da AULA 03</p>
-            <a href="estruturasControle/index.php" class="stretched-link text-white">Aula 03</a>
+        <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+          <div class="card h-100">
+            <a href="estruturasControle/" class="text-dark">
+              AULA 03
+            </a>
           </div>
         </div>
-      </div>
-      <!-- proximo -->
-      <div class="row my-5">
-        <div class="col position-relative borderTeste">
-          <div>
-            <h5 class="mt-0">Funções</h5>
-            <p>Atividaes 8 no total</p>
-            <a href="aula04/index.php" class="stretched-link text-white">Aula 04</a>
+        <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+          <div class="card h-100">
+            <a href="aula04/" class="text-dark">
+              Funções
+            </a>
           </div>
         </div>
-        <div class="col position-relative borderTeste">
-          <div>
-            <h5 class="mt-0">Loja de Carros</h5>
-            <p>Atividade</p>
-            <a href="loja-de-veiculos/index.php" class="stretched-link text-white">Loja</a>
+        <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+          <div class="card h-100">
+            <a href="https://github.com/MatheusXz/finance" class="text-dark">
+              Finance
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+          <div class="card h-100">
+            <a href="loja-de-veiculos/" class="text-dark">
+              Loja de Carros
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+          <div class="card h-100">
+            <a href="library/" class="text-dark">
+              Library
+            </a>
           </div>
         </div>
       </div>
@@ -181,13 +191,11 @@
     <section id="contact" class="my-5">
       <div class="row">
         <h2>Contact us</h2>
-
       </div>
     </section>
 
     <footer class="mt-auto text-white-50">
-      <p>by Matheus A. <a
-          href="https://github.com/MatheusXz" target="_blank" class="text-white">GitHub</a>.</p>
+      <p>by Matheus A. <a href="https://github.com/MatheusXz" target="_blank" class="text-white">GitHub</a>.</p>
     </footer>
   </div>
 
